Fix align

--- a/src/pages/HealthDeclaration/index.module.less
+++ b/src/pages/HealthDeclaration/index.module.less
@@ -24,13 +24,16 @@
 .card {
   width: 100%;
   height: 100%;
-}
-.card-content {
-  text-align: center;
-  font-size: 1.25rem;
-  font-weight: 600;
-}
-
-.form-container {
-  margin-top: 20px;
+  .card-content {
+    text-align: center;
+    font-size: 1.25rem;
+    font-weight: 600;
+    height: 80px;
+    line-height: 80px;
+    p {
+      line-height: 1.5;
+      vertical-align: middle;
+      display: inline-block;
+    }
+  }
 }
